--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -35,7 +35,7 @@
             }
         });
 
-        $(document).on('change', '#shipping-user-address select[name="phonecountrycode"]', function(e) {
+        $(document).on('change', '#plugin-quote-quoteform select[name="phonecountrycode"]', function(e) {
             var countryEl = $(e.currentTarget),
                 chosenCountryCode = countryEl.val(),
                 desktopMasks = JSON.parse('<?php echo json_encode($this->desktopMasks);?>');
