Add Spain translate

--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -1,4 +1,5 @@
 <div id="products-container" class="seotoaster container refreshOnClose">
+    <input type="hidden" name="system-language" value="<?php echo Tools_Misc::getJsTranslationLanguage();?>"/>
     <?php
     $quoteSearch = '<div class="grid_5"><input type="text" name="search" id="search" placeholder="'.$this->translate('search products').'"/></div>';
 
