--- a/system/app/Widgets/Quote/views/controls.quote.phtml
+++ b/system/app/Widgets/Quote/views/controls.quote.phtml
@@ -1,4 +1,5 @@
 <div class="quote-controlls">
+    <input type="hidden" name="hiddenRemoveConfirm" id="remove-confirm" value="<?php echo $this->translate('You are about to remove an item. Are you sure?'); ?>" />
     <!-- Quote id -->
     <input type="hidden" name="hiddenQuoteId" id="quote-id" value="<?php echo $this->quoteId; ?>" />
 
