Add save quote notes by change event

--- a/system/app/Widgets/Quote/views/controls.quote.phtml
+++ b/system/app/Widgets/Quote/views/controls.quote.phtml
@@ -11,7 +11,7 @@
     </a>
 
     <!-- save quote controll -->
-	<a href="javascript:;" class="quote-control btn-toaster" data-sendmail="0">
+	<a href="javascript:;" class="quote-control btn-toaster quote-control-save" data-sendmail="0">
         <?php echo $this->translate('Save quote'); ?>
     </a>
 
