--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -7,7 +7,11 @@
                     <span class="option-title"><?php echo $title; ?>:</span>
                     <span><?php echo $optData['title']; ?></span>
                     <?php if(isset($optData['selection'])): ?>
-                        <span><?php echo $optData['selection']; ?></span>
+                        <?php if($optData['type'] === 'text'): ?>
+                            <span><?php echo $optData['selection']['title']; ?></span>
+                        <?php else :?>
+                            <span><?php echo $optData['selection']; ?></span>
+                        <?php endif;?>
                     <?php endif; ?>
                 </div>
 	        <?php endif; ?>
