Change msg and add required fields filter

--- a/system/app/Widgets/Quote/views/controls.quote.phtml
+++ b/system/app/Widgets/Quote/views/controls.quote.phtml
@@ -6,7 +6,7 @@
     <input type="hidden" name="currencySymbol" id="quote-currency" value="<?php echo $this->symbol; ?>" />
 
     <!-- add product to quote controll -->
-    <a href="javascript:;" id="add-product-to-quote" class="tpopup btn-toaster" data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/product/qid/<?php echo $this->quoteId; ?>" data-pheight="560">
+    <a href="javascript:;" id="add-product-to-quote" data-type="addProduct" class="tpopup btn-toaster" data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/product/qid/<?php echo $this->quoteId; ?>" data-pheight="560">
         <?php echo $this->translate('Add product'); ?>
     </a>
 
