Add skip Check required fields for preview and clone quote

--- a/system/app/Widgets/Quote/views/controls.quote.phtml
+++ b/system/app/Widgets/Quote/views/controls.quote.phtml
@@ -6,7 +6,7 @@
     <input type="hidden" name="currencySymbol" id="quote-currency" value="<?php echo $this->symbol; ?>" />
 
     <!-- add product to quote controll -->
-    <a href="javascript:;" id="add-product-to-quote" data-type="addProduct" class="tpopup btn-toaster" data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/product/qid/<?php echo $this->quoteId; ?>" data-pheight="560">
+    <a href="javascript:;" id="add-product-to-quote" data-type="skipCheckRequired" class="tpopup btn-toaster" data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/product/qid/<?php echo $this->quoteId; ?>" data-pheight="560">
         <?php echo $this->translate('Add product'); ?>
     </a>
 
@@ -21,12 +21,12 @@
     </a>
 
     <!-- preview quote controll -->
-	<a href="<?php echo $this->websiteUrl;?><?php echo $this->quoteId; ?>.html?mode=preview" class="quote-control btn-toaster" target="_blank">
+	<a href="<?php echo $this->websiteUrl;?><?php echo $this->quoteId; ?>.html?mode=preview" data-type="skipCheckRequired" class="quote-control btn-toaster" target="_blank">
         <?php echo $this->translate('Preview quote'); ?>
     </a>
 
     <!-- clone quote -->
-    <a href="javascript:;" class="clone-quote btn-toaster">
+    <a href="javascript:;" class="clone-quote btn-toaster" data-type="skipCheckRequired">
         <?php echo $this->translate('Duplicate quote'); ?>
     </a>
 </div>
