--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -8,12 +8,13 @@
             'innerHeaderHtml' => $quoteSearch
         )
     ); ?>
-    <div id="products" class="content-footer scroll pl2 pr2 column_8 full-width"></div>
-    <div id="product-list-holder" class="content-footer scroll pl2 pr2 column_8 full-width" data-emptymsg=" <?php echo $this->translate('Nothing Found'); ?>"></div>
-    <footer class="grid_12">
-        <button id="save-btn" class="btn add-products ticon-save"><?php echo $this->translate('Add products and close'); ?></button>
-        <p class="message info grid_4 pt0px pb0px alpha"><i class="ticon-info-sign"></i> <?php echo $this->translate('Select 1 or more products&nbsp'); ?></p>
-    </footer>
+    <div id="products" class="content-footer scroll pl2 pr2 column_8 full-width" data-emptymsg="<?php echo $this->translate('Nothing Found'); ?>"></div>
+    <div class="grid_12">
+        <div class="products-paginator grid_6 mt15px alpha omega"></div>
+        <button id="save-btn" class="btn add-products ticon-save grid_3 mt10px omega"><?php echo $this->translate('Add products and close'); ?></button>
+        <p class="message info grid_3 pt0px pb0px omega mt15px"><i class="ticon-info-sign"></i> <?php echo $this->translate('Select 1 or more products&nbsp'); ?></p>
+    </div>
+    <input type="hidden" id="checkedProducts" value=""/>
 </div>
 <?php
         $this->headScript()->setAllowArbitraryAttributes(true)
