fix last pagination page

--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -1,6 +1,6 @@
 <div id="products-container" class="seotoaster container refreshOnClose">
     <?php
-    $quoteSearch = '<div class="grid_5"><input type="text" name="search" id="search" placeholder="'.$this->translate('by name, sku, mpn or tags').'"/></div>';
+    $quoteSearch = '<div class="grid_5"><input type="text" name="search" id="search" placeholder="'.$this->translate('Search by name, sku, mpn or tags').'"/></div>';
 
     echo $this->partial(
         'admin' . DIRECTORY_SEPARATOR . '_header.phtml',
