--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -2,7 +2,16 @@
 <script type="text/template" id="quote-grid-row">
     <td><input type="checkbox" class="quote-grid-row-checkbox" id="<%= id %>" <% if (this.model.get('checked')) {%>checked="checked"<% }%> /></td>
     <td><%= id %></td>
-    <td><%= (creatorId == 0) ? ownerName : (customerName === '') ? "<?php echo $this->translate('Not set'); ?>" : customerName %></td>
+    <td>
+    <% if (userLink != '') { %>
+        <a target="_blank" href="<%= userLink %>">
+    <% } %>
+        <%= (creatorId == 0) ? ownerName : (customerName === '') ? "<?php echo $this->translate('Not set'); ?>" : customerName %>
+    <% if (userLink != '') { %>
+        </a>
+    <% } %>
+
+    </td>
     <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html"><%= title %></a></td>
     <td><%= (ownerName != null) ? ownerName : "<?php echo $this->translate('unknown'); ?>" %></td>
     <td><%= $.datepicker.formatDate('dd-M-yy', new Date(Date.parse(createdAt.replace(/\-/g, '/')))) %></td>
