Changed FR translate for send quote msg

--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -106,7 +106,7 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
             }).css({borderColor: "indianred"});
 
             if(notValidElements.length) {
-                showMessage('<?php echo $this->translate('Required fields are missing! Please fill all fields marked with *'); ?>', true);
+                showMessage("<?php echo $this->translate('Required fields are missing! Please fill all fields marked with *'); ?>", true);
                 return false;
             }
 
