Fix product qty and price

--- a/web/js/modules/options/templates/item.html
+++ b/web/js/modules/options/templates/item.html
@@ -39,14 +39,16 @@
         <!-- option type text -->
         <% if(value.type == 'text') { %>
             <label class="grid_3 mt0-5em"><%= value.title %></label>
-            <input class="grid_9" type="text" name="product-<%= id %>-option-<%= value.id %>" />
+            <% textValue = (typeof window.currOptions[value.id] !== 'undefined') ? window.currOptions[value.id] : '' %>
+            <input class="grid_9" type="text" name="product-<%= id %>-option-<%= value.id %>" value="<%= textValue%>" />
         <% } %>
         <!-- /option type text -->
 
         <!-- option type date -->
         <% if(value.type == 'date') { %>
             <label class="grid_3 mt0-5em" for="product-<%= id %>-option-<%= value.id %>"><%= value.title %></label>
-            <input class="grid_9" type="date" name="product-<%= id %>-option-<%= value.id %>" id="product-<%= id %>-option-<%= value.id %>" />
+            <% dateValue = (typeof window.currOptions[value.id] !== 'undefined') ? window.currOptions[value.id] : '' %>
+            <input class="grid_9" type="date" name="product-<%= id %>-option-<%= value.id %>" id="product-<%= id %>-option-<%= value.id %>" value="<%= dateValue%>" />
         <% } %>
         <!-- /option type date -->
         </li>
