--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -1,23 +1,38 @@
 <?php if(!empty($this->options)): ?>
 	<?php $currOpts = array();?>
-        <?php foreach($this->options as $title => $optData):?>
-           <?php if (is_array($optData) && !empty($optData)): ?>
-                <?php $currOpts[$optData['option_id']] = $optData['id']; ?>
-                <div class="options">
-                    <?php if(!isset($optData['type']) || $optData['type'] !== 'text'): ?>
+    <?php foreach($this->options as $title => $optData):?>
+        <?php if (is_array($optData) && !empty($optData)): ?>
+            <?php
+            if(empty($optData['option_id']) && !empty($optData['id'])) {
+                $currOpts[$optData['id']] = $optData['selection']['title'];
+            } elseif (empty($optData['id']) && !empty($optData['option_id'])) {
+                $currOpts[$optData['option_id']] = $optData['title'];
+            } else {
+                $currOpts[$optData['option_id']] = $optData['id'];
+            }
+            ?>
+
+            <div class="options">
+                <?php if(!isset($optData['type']) || ($optData['type'] !== 'text' || $optData['type'] !== 'date')): ?>
+                    <?php if(is_numeric($title)) :?>
+                        <span class="option-title"><?php echo $optData['title']; ?>:</span>
+                    <?php else:?>
                         <span class="option-title"><?php echo $title; ?>:</span>
+                        <span><?php echo $optData['title']; ?></span>
                     <?php endif;?>
+                <?php else:?>
                     <span><?php echo $optData['title']; ?></span>
-                    <?php if(isset($optData['selection'])): ?>
-                        <?php if($optData['type'] === 'text'): ?>
-                            <span><?php echo $optData['selection']['title']; ?></span>
-                        <?php else :?>
-                            <span><?php echo $optData['selection']; ?></span>
-                        <?php endif;?>
-                    <?php endif; ?>
-                </div>
-	        <?php endif; ?>
-        <?php endforeach; ?>
+                <?php endif;?>
+                <?php if(isset($optData['selection'])): ?>
+                    <?php if($optData['type'] === 'text' || $optData['type'] === 'date'): ?>
+                        <span><?php echo $optData['selection']['title']; ?></span>
+                    <?php else :?>
+                        <span><?php echo $optData['selection']; ?></span>
+                    <?php endif;?>
+                <?php endif; ?>
+            </div>
+        <?php endif; ?>
+    <?php endforeach; ?>
 <?php endif; ?>
 <?php if(Tools_Security_Acl::isAllowed(Shopping::RESOURCE_STORE_MANAGEMENT)): ?>
     <?php if (isset($currOpts)): ?>
