--- a/system/app/Widgets/Quote/views/item/photo.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/photo.quote.item.phtml
@@ -1,1 +1,1 @@
-<img src="<?php echo $this->websiteUrl . 'media/' . $this->imgArr[0] . '/product/' . $this->imgArr[1]; ?>" alt="<?php echo $this->name; ?>">
+<img src="<?php echo $this->imageUrl;?>" alt="<?php echo $this->name; ?>">
