--- a/system/app/Widgets/Quote/views/controls.quote.phtml
+++ b/system/app/Widgets/Quote/views/controls.quote.phtml
@@ -29,9 +29,19 @@
     <a href="javascript:;" class="clone-quote btn-toaster" data-type="skipCheckRequired">
         <?php echo $this->translate('Duplicate quote'); ?>
     </a>
+
+    <!-- Quote draggable -->
+    <input type="hidden" name="quote-draggable-products" id="quote-draggable-products" value="<?php echo $this->quoteDraggableProducts; ?>" />
 </div>
 <?php $this->jQuery()->addJavascriptFile($this->websiteUrl . 'plugins/quote/web/js/libs/accounting/accounting.min.js'); ?>
 <script type="text/javascript">
+    <?php if(!empty($this->quoteDraggableProducts)) :?>
+        var emptyQuoteContent = $('.empty-quote-content');
+
+        if(!emptyQuoteContent.length) {
+            $("#quote-sortable").sortable().disableSelection();
+        }
+    <?php endif;?>
     $(function() {
         accounting.settings.currency = <?php echo Zend_Json::encode(Tools_Misc::getCurrencyFormat()); ?>;
     });
