--- a/system/app/Widgets/Quote/views/payment-type-config.phtml
+++ b/system/app/Widgets/Quote/views/payment-type-config.phtml
@@ -1,4 +1,4 @@
-<div id="quote-payment-type-config-block" class="grid_12">
+<div id="quote-payment-type-config-block">
     <?php if ($this->accessAllowed === true): ?>
         <p><label><?php echo $this->translate('Payment type'); ?></label>
             <select
