--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -1,4 +1,4 @@
-<div id="quote-type-info" class="grid_12">
+<div id="quote-type-info">
     <?php if ($this->paymentType === Quote_Models_Model_Quote::PAYMENT_TYPE_FULL): ?>
         <span id="quote-type-info-message">
         <?php if (empty($this->isSignatureRequired)): ?>
