--- a/system/app/Widgets/Quote/views/item/price.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/price.quote.item.phtml
@@ -1,9 +1,19 @@
 <?php if($this->editAllowed && $this->unitPrice == 'unit'): ?>
-    <input data-sid="<?php echo $this->sid; ?>" data-pid="<?php echo $this->productId; ?>" data-scope="quote-item" data-type="price" class="quote-recalculate price-unit" type="text" value="<?php echo round($this->price,2); ?>" />
+    <?php if(!empty($this->usNumericFormat)) :?>
+        <?php $price = number_format(round($this->price,2), 2);?>
+    <?php else :?>
+        <?php $price = round($this->price,2);?>
+    <?php endif;?>
+    <input data-sid="<?php echo $this->sid; ?>" data-pid="<?php echo $this->productId; ?>" data-scope="quote-item" data-type="price" class="quote-recalculate price-unit" type="text" value="<?php echo $price; ?>" />
 <?php else: ?>
     <?php if(isset($this->freebies)):?>
         <span data-sid="<?php echo $this->sid; ?>" data-pid="<?php echo $this->productId; ?>" class="price-<?php echo (($this->unitPrice) ? 'unit' : 'total'); ?>"><?php echo $this->translate('free'); ?></span>
     <?php else:?>
-        <span data-sid="<?php echo $this->sid; ?>" data-pid="<?php echo $this->productId; ?>" class="price-<?php echo (($this->unitPrice) ? 'unit' : 'total'); ?>"><?php echo $this->currency($this->price); ?></span>
+        <?php if(!empty($this->usNumericFormat)) :?>
+            <?php $price = number_format($this->price, 2) . '&nbsp;' . $this->currencySymbol;?>
+        <?php else :?>
+            <?php $price = $this->currency($this->price);?>
+        <?php endif;?>
+        <span data-sid="<?php echo $this->sid; ?>" data-pid="<?php echo $this->productId; ?>" class="price-<?php echo (($this->unitPrice) ? 'unit' : 'total'); ?>"><?php echo $price; ?></span>
     <?php endif;?>
 <?php endif; ?>
