--- a/system/app/Widgets/Quote/views/total.quote.phtml
+++ b/system/app/Widgets/Quote/views/total.quote.phtml
@@ -1,1 +1,7 @@
-<span class="<?php echo $this->totalType; ?>-total"><?php echo $this->currency($this->total); ?></span>
+<?php if(!empty($this->usNumericFormat)) :?>
+    <?php $total = number_format($this->total, 2) . '&nbsp;' . $this->currencySymbol;?>
+<?php else :?>
+    <?php $total = $this->currency($this->total);?>
+<?php endif;?>
+
+<span class="<?php echo $this->totalType; ?>-total"><?php echo $total; ?></span>
